Kubernetes/KubernetesPoPolsku/s01/e05-ingress/domainname/replicaset_service_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  rules:
  - host: hello-world.127.0.0.1.nip.io # 127.0.0.1 will be kubectl patch'ed to `minikube ip`
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port:
              number: 8080
---
  apiVersion: v1
  kind: Service
  metadata:
    name: hello-world-service
  spec:
    type: ClusterIP
    selector:
      # Route the traffic to PODs with following label
      app: hello-world-pod
    ports:
      - protocol: "TCP"
        # Port accessible inside cluster. It forwards to targetPort 80 inside pod
        port: 8080
        # Port To forward to inside pod
        targetPort: 80

---
  apiVersion: apps/v1
  kind: ReplicaSet
  metadata:
    name: hello-world-replicaset # pods will be named: hello-world-replicaset-someid
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: hello-world-pod
    template:
      metadata:
        name: hello-world-pod
        labels:
          app: hello-world-pod
      spec:
        containers:
          - name: hello-world-container
            image: tutum/hello-world
            ports:
              - containerPort: 80
